apps/api/out4.txt
C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/test/enterprise.test.ts(13,53): error TS2345: Argument of type 'string' is not assignable to parameter of type 'ISchema'.
src/test/enterprise.test.ts(18,53): error TS2345: Argument of type 'string' is not assignable to parameter of type 'ISchema'.

    at createTSError (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\setup\Music\database\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2345, 2345 ]
}
